apis for sequnce configuration
